Data/1612222/submit2/build/fault.txt
Error: Command failed: g++ fileheader.h filesource.cpp main.cpp -o 1612222
filesource.cpp: In function 'void process(std::__cxx11::string, float*, int)':
filesource.cpp:32:2: error: expected ';' before 'file'
  file.close();
  ^~~~
